# l-system-rs

./: AGENT.md  Cargo.toml  README.md
src/: lib.rs  parametric.rs  rule.rs  stochastic.rs  system.rs  turtle.rs
